--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -13,7 +13,7 @@
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a class="nav-link" href="index.jsp">Home</a></li>
 				<li th:each="menu : ${menu}" class='nav-item'><a
-					th:text="${menu.title}" href="postlist.html?boardid=${menu.id}"
+					th:text="${menu.title}" th:href="@{post/list(boardid=${menu.id})}"
 					class="nav-link"></a>
 				</li>
 			</ul>
