[fix] use scripts fragment

--- a/src/main/resources/templates/postlist.html
+++ b/src/main/resources/templates/postlist.html
@@ -19,7 +19,6 @@
 						Posted by <span th:text="${post.author}"></span> on
 					<p th:remove="tag"
 						th:text="${#dates.format(post.date,'yyyy-MM-dd')}" />
-					</p>
 					<hr />
 				</div>
 
@@ -39,5 +38,8 @@
 	</div>
 
 	<footer th:replace="fragments/footer.html :: footer"></footer>
+	<th:block layout:fragment="script">
+		<script th:replace="fragments/scripts.html :: script"></script>
+	</th:block>
 </body>
 </html>
