--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -2,7 +2,7 @@
 <nav th:fragment="nav"
 	class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 	<div class="container">
-		<a class="navbar-brand" href="index.jsp">Cinematic</a>
+		<a class="navbar-brand" href="/">Cinematic</a>
 		<button class="navbar-toggler navbar-toggler-right" type="button"
 			data-toggle="collapse" data-target="#navbarResponsive"
 			aria-controls="navbarResponsive" aria-expanded="false"
@@ -12,9 +12,12 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a class="nav-link" href="index.jsp">Home</a></li>
-				<li th:each="menu : ${menu}" class='nav-item'><a
-					th:text="${menu.title}" th:href="@{post/list(boardid=${menu.id})}"
-					class="nav-link"></a>
+				<li th:each="menu : ${menu}" class='nav-item'>
+					<a 
+					th:text="${menu.title}" 
+					th:href="@{post/list(boardid=${menu.id})}"
+					class="nav-link">
+					</a>
 				</li>
 			</ul>
 			<div class="searchbar">
