[feat] add update button in `postview.html`

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,5 +23,8 @@
 	</div>
 
 	<footer th:replace="fragments/footer.html :: footer"></footer>
+	<th:block layout:fragment="script">
+		<script th:replace="fragments/scripts.html :: script"></script>
+	</th:block>
 </body>
 </html>
