--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -11,7 +11,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a class="nav-link" href="index.jsp">Home</a></li>
+				<li class="nav-item">
+					<a class="nav-link" th:href="@{/}">Home</a>
+				</li>
 				<li th:each="menu : ${menu}" class='nav-item'>
 					<a 
 					th:text="${menu.title}" 
@@ -21,8 +23,11 @@
 				</li>
 			</ul>
 			<div class="searchbar">
-				<form class="searchForm" method="post" action="search.jsp">
-					<input class="search_input" type="text" name="search"
+				<form class="searchForm" 
+					method="GET" 
+					th:action="@{/post/search}">
+					<input class="search_input" name="keyword"
+						type="text" th:value="${keyword}"
 						placeholder="Search..." required>
 					<button type="submit" class="search_icon"></button>
 					<i class="fas fa-search"></i>
